content/docs/0.11.x/reference/cli/commands/keptn_get_service.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn get service"
slug: keptn_get_service
---
## keptn get service

Get service details

### Synopsis

Get all services or details for a given service within a Keptn project

```
keptn get service [flags]
```

### Examples

```
keptn get service carts --project=sockshop
NAME           CREATION DATE                 
carts          sockshop        2020-05-28T10:25:58+02:00

keptn get services                                   # List all services in keptn

keptn get services --project=sockshop                # List all services in the sockshop project

keptn get services carts --project=sockshop -o=json  # Get details of the carts service in the sockshop project as json output

```

### Options

```
  -o, --output string    Output format. One of json|yaml
      --project string   keptn project name
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn get](../keptn_get/)	 - Displays an event or Keptn entities such as project, stage, or service

###### Auto generated by spf13/cobra on 25-Nov-2021
